v3/tests/backend-tests/default-args-3.golden_py3
{
  "code": "# py3 only\ndef baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3=[5,4,3,2,1], **my_kwargs):\n    my_kwonly3.append(my_kwonly1)\n    my_kwonly3.append(my_kwonly2)\n\nbaz(my_kwonly1='hello', my_kwonly2='world')\nbaz(my_kwonly1=1, my_kwonly2=2)\n", 
  "trace": [
    {
      "ordered_globals": [], 
      "stdout": "", 
      "func_name": "<module>", 
      "stack_to_render": [], 
      "globals": {}, 
      "heap": {}, 
      "line": 2, 
      "event": "step_line"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "<module>", 
      "stack_to_render": [], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1
        ]
      }, 
      "line": 6, 
      "event": "step_line"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "baz", 
      "stack_to_render": [
        {
          "frame_id": 1, 
          "encoded_locals": {
            "my_kwonly1": "hello", 
            "my_kwargs": [
              "REF", 
              3
            ], 
            "my_kwonly3": [
              "REF", 
              2
            ], 
            "my_kwonly2": "world", 
            "my_args": [
              "REF", 
              4
            ]
          }, 
          "is_highlighted": true, 
          "is_parent": false, 
          "func_name": "baz", 
          "is_zombie": false, 
          "parent_frame_id_list": [], 
          "unique_hash": "baz_f1", 
          "ordered_varnames": [
            "my_kwonly1", 
            "my_kwonly2", 
            "my_kwonly3", 
            "my_args", 
            "my_kwargs"
          ]
        }
      ], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1
        ], 
        "3": [
          "DICT"
        ], 
        "4": [
          "TUPLE"
        ]
      }, 
      "line": 2, 
      "event": "call"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "baz", 
      "stack_to_render": [
        {
          "frame_id": 1, 
          "encoded_locals": {
            "my_kwonly1": "hello", 
            "my_kwargs": [
              "REF", 
              3
            ], 
            "my_kwonly3": [
              "REF", 
              2
            ], 
            "my_kwonly2": "world", 
            "my_args": [
              "REF", 
              4
            ]
          }, 
          "is_highlighted": true, 
          "is_parent": false, 
          "func_name": "baz", 
          "is_zombie": false, 
          "parent_frame_id_list": [], 
          "unique_hash": "baz_f1", 
          "ordered_varnames": [
            "my_kwonly1", 
            "my_kwonly2", 
            "my_kwonly3", 
            "my_args", 
            "my_kwargs"
          ]
        }
      ], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1
        ], 
        "3": [
          "DICT"
        ], 
        "4": [
          "TUPLE"
        ]
      }, 
      "line": 3, 
      "event": "step_line"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "baz", 
      "stack_to_render": [
        {
          "frame_id": 1, 
          "encoded_locals": {
            "my_kwonly1": "hello", 
            "my_kwargs": [
              "REF", 
              3
            ], 
            "my_kwonly3": [
              "REF", 
              2
            ], 
            "my_kwonly2": "world", 
            "my_args": [
              "REF", 
              4
            ]
          }, 
          "is_highlighted": true, 
          "is_parent": false, 
          "func_name": "baz", 
          "is_zombie": false, 
          "parent_frame_id_list": [], 
          "unique_hash": "baz_f1", 
          "ordered_varnames": [
            "my_kwonly1", 
            "my_kwonly2", 
            "my_kwonly3", 
            "my_args", 
            "my_kwargs"
          ]
        }
      ], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1, 
          "hello"
        ], 
        "3": [
          "DICT"
        ], 
        "4": [
          "TUPLE"
        ]
      }, 
      "line": 4, 
      "event": "step_line"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "baz", 
      "stack_to_render": [
        {
          "frame_id": 1, 
          "encoded_locals": {
            "my_kwonly1": "hello", 
            "my_kwonly3": [
              "REF", 
              2
            ], 
            "my_kwonly2": "world", 
            "my_args": [
              "REF", 
              4
            ], 
            "__return__": null, 
            "my_kwargs": [
              "REF", 
              3
            ]
          }, 
          "is_highlighted": true, 
          "is_parent": false, 
          "func_name": "baz", 
          "is_zombie": false, 
          "parent_frame_id_list": [], 
          "unique_hash": "baz_f1", 
          "ordered_varnames": [
            "my_kwonly1", 
            "my_kwonly2", 
            "my_kwonly3", 
            "my_args", 
            "my_kwargs", 
            "__return__"
          ]
        }
      ], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1, 
          "hello", 
          "world"
        ], 
        "3": [
          "DICT"
        ], 
        "4": [
          "TUPLE"
        ]
      }, 
      "line": 4, 
      "event": "return"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "<module>", 
      "stack_to_render": [], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1, 
          "hello", 
          "world"
        ]
      }, 
      "line": 7, 
      "event": "step_line"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "baz", 
      "stack_to_render": [
        {
          "frame_id": 2, 
          "encoded_locals": {
            "my_kwonly1": 1, 
            "my_kwargs": [
              "REF", 
              5
            ], 
            "my_kwonly3": [
              "REF", 
              2
            ], 
            "my_kwonly2": 2, 
            "my_args": [
              "REF", 
              4
            ]
          }, 
          "is_highlighted": true, 
          "is_parent": false, 
          "func_name": "baz", 
          "is_zombie": false, 
          "parent_frame_id_list": [], 
          "unique_hash": "baz_f2", 
          "ordered_varnames": [
            "my_kwonly1", 
            "my_kwonly2", 
            "my_kwonly3", 
            "my_args", 
            "my_kwargs"
          ]
        }
      ], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1, 
          "hello", 
          "world"
        ], 
        "4": [
          "TUPLE"
        ], 
        "5": [
          "DICT"
        ]
      }, 
      "line": 2, 
      "event": "call"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "baz", 
      "stack_to_render": [
        {
          "frame_id": 2, 
          "encoded_locals": {
            "my_kwonly1": 1, 
            "my_kwargs": [
              "REF", 
              5
            ], 
            "my_kwonly3": [
              "REF", 
              2
            ], 
            "my_kwonly2": 2, 
            "my_args": [
              "REF", 
              4
            ]
          }, 
          "is_highlighted": true, 
          "is_parent": false, 
          "func_name": "baz", 
          "is_zombie": false, 
          "parent_frame_id_list": [], 
          "unique_hash": "baz_f2", 
          "ordered_varnames": [
            "my_kwonly1", 
            "my_kwonly2", 
            "my_kwonly3", 
            "my_args", 
            "my_kwargs"
          ]
        }
      ], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1, 
          "hello", 
          "world"
        ], 
        "4": [
          "TUPLE"
        ], 
        "5": [
          "DICT"
        ]
      }, 
      "line": 3, 
      "event": "step_line"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "baz", 
      "stack_to_render": [
        {
          "frame_id": 2, 
          "encoded_locals": {
            "my_kwonly1": 1, 
            "my_kwargs": [
              "REF", 
              5
            ], 
            "my_kwonly3": [
              "REF", 
              2
            ], 
            "my_kwonly2": 2, 
            "my_args": [
              "REF", 
              4
            ]
          }, 
          "is_highlighted": true, 
          "is_parent": false, 
          "func_name": "baz", 
          "is_zombie": false, 
          "parent_frame_id_list": [], 
          "unique_hash": "baz_f2", 
          "ordered_varnames": [
            "my_kwonly1", 
            "my_kwonly2", 
            "my_kwonly3", 
            "my_args", 
            "my_kwargs"
          ]
        }
      ], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1, 
          "hello", 
          "world", 
          1
        ], 
        "4": [
          "TUPLE"
        ], 
        "5": [
          "DICT"
        ]
      }, 
      "line": 4, 
      "event": "step_line"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "baz", 
      "stack_to_render": [
        {
          "frame_id": 2, 
          "encoded_locals": {
            "my_kwonly1": 1, 
            "my_kwonly3": [
              "REF", 
              2
            ], 
            "my_kwonly2": 2, 
            "my_args": [
              "REF", 
              4
            ], 
            "__return__": null, 
            "my_kwargs": [
              "REF", 
              5
            ]
          }, 
          "is_highlighted": true, 
          "is_parent": false, 
          "func_name": "baz", 
          "is_zombie": false, 
          "parent_frame_id_list": [], 
          "unique_hash": "baz_f2", 
          "ordered_varnames": [
            "my_kwonly1", 
            "my_kwonly2", 
            "my_kwonly3", 
            "my_args", 
            "my_kwargs", 
            "__return__"
          ]
        }
      ], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1, 
          "hello", 
          "world", 
          1, 
          2
        ], 
        "4": [
          "TUPLE"
        ], 
        "5": [
          "DICT"
        ]
      }, 
      "line": 4, 
      "event": "return"
    }, 
    {
      "ordered_globals": [
        "baz"
      ], 
      "stdout": "", 
      "func_name": "<module>", 
      "stack_to_render": [], 
      "globals": {
        "baz": [
          "REF", 
          1
        ]
      }, 
      "heap": {
        "1": [
          "FUNCTION", 
          "baz(*my_args, my_kwonly1, my_kwonly2, my_kwonly3, **my_kwargs)", 
          null, 
          [
            [
              "my_kwonly3", 
              [
                "REF", 
                2
              ]
            ]
          ]
        ], 
        "2": [
          "LIST", 
          5, 
          4, 
          3, 
          2, 
          1, 
          "hello", 
          "world", 
          1, 
          2
        ]
      }, 
      "line": 7, 
      "event": "return"
    }
  ]
}
